--- a/src/App.css
+++ b/src/App.css
@@ -1,86 +1,97 @@
 .container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .container canvas {
-	box-shadow: 5px 5px 0px #00000055;
-	transition: box-shadow 0.3s ease;
-	margin-bottom: 1em;
+  box-shadow: 5px 5px 0px #00000055;
+  transition: box-shadow 0.3s ease;
+  margin-bottom: 1em;
 }
 
 .container canvas:hover {
-	box-shadow: 10px 10px 0px #00000055;
+  box-shadow: 10px 10px 0px #00000055;
 }
 
 .container input {
-	margin-top: 0.75em;
-	padding: 0.5em;
-	font-family: inherit;
-	font-size: 1.5em;
-	background: #00000022;
-	border: none;
-	border-radius: 5px;
-	transition: background 0.3s ease;
-	text-align: center;
+  margin-top: 0.75em;
+  padding: 0.5em;
+  font-family: inherit;
+  font-size: 1.5em;
+  background: #00000022;
+  border: none;
+  border-radius: 5px;
+  transition: background 0.3s ease;
+  text-align: center;
 }
 
 .container input:focus {
-	outline: none;
-	background: #00000033;
+  outline: none;
+  background: #00000033;
 }
 
 .container input:hover {
-	outline: none;
-	background: #00000033;
+  outline: none;
+  background: #00000033;
 }
 
-.container a {
-	margin-top: 0.75em;
-	padding: 0.7em;
-	font-size: 0.75em;
-	background: #28146d;
-	border-radius: 8px;
-	color: #fff;
-	text-decoration: none;
-	font-size: 1.25em;
-	transition: all 0.3s ease;
-	box-shadow: 3px 3px 0px #00000055;
+.container a,
+.container button {
+  margin-top: 0.75em;
+  padding: 0.7em;
+  font-size: 0.75em;
+  background: #28146d;
+  border-radius: 8px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.25em;
+  transition: all 0.3s ease;
+  box-shadow: 3px 3px 0px #00000055;
+  border: none;
+  font-family: inherit;
 }
 
-.container a:hover {
-	background: #3c258f;
-	box-shadow: 6px 6px 0px #00000055;
+.container a:hover,
+.container button:hover {
+  background: #3c258f;
+  box-shadow: 6px 6px 0px #00000055;
+  cursor: pointer;
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 @media only screen and (max-height: 600px) {
-	footer {
-		position: relative;
-	}
+  footer {
+    position: relative;
+  }
 }
 
 @media only screen and (max-width: 350px) {
-	.container input {
-		padding: 0.3em;
-		font-size: 1.4em;
-		width: 250px;
-	}
+  .container input {
+    padding: 0.3em;
+    font-size: 1.4em;
+    width: 250px;
+  }
 }
 
 footer a {
-	color: black;
+  color: black;
 }
 
 footer img {
-	height: 32px;
+  height: 32px;
+}
+
+.subjectChange {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
